<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:orientation="vertical"
    android:background="@color/merah">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/head"
        android:layout_marginTop="35dp"
        android:text="@string/tambah_data"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/hitam"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/slot_waktu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/waktu"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/waktu" />

        <EditText
            android:id="@+id/hari_input"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/hari"
            android:inputType="text"
            android:textAllCaps="true"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/detail_waktu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/slot_waktu"
        android:layout_marginTop="10dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tanggal_input"
            android:layout_marginLeft="65dp"
            android:hint="@string/tanggal"
            android:gravity="center"
            android:inputType="number"/>
        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/bulan_input"
            android:layout_marginLeft="10dp"
            android:hint="@string/bulan"
            android:inputType="text"
            android:gravity="center"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tahun_input"
            android:layout_marginLeft="10dp"
            android:hint="@string/tahun"
            android:gravity="center"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/angin_permukaan_detail"
        android:layout_below="@+id/detail_waktu"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/daun"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:id="@+id/angin_permukaan_input"
            android:hint="@string/anging_permukaan"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/azimuth_detail"
        android:orientation="horizontal"
        android:layout_below="@+id/angin_permukaan_detail"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/sudut_putar"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:id="@+id/azimuth_input"
            android:hint="@string/azimuth"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/elevasi_detail"
        android:orientation="horizontal"
        android:layout_below="@+id/azimuth_detail"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/miring" />
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/elevasi_input"
            android:gravity="center"
            android:hint="@string/elevasi"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ketinggian_detail"
        android:layout_below="@+id/elevasi_detail"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/panahatas"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/ketinggian_input"
            android:hint="@string/ketinggian"
            android:layout_marginLeft="10dp"
            android:inputType="number"
            android:gravity="center"/>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ketinggian_detail"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:text="@string/tambah"
        android:id="@+id/add_data"
        android:textColor="@color/putih"
        android:background="@drawable/bulat"/>
</RelativeLayout>