<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        app:cardBackgroundColor="@android:color/transparent"
        android:elevation="0dp"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:id="@+id/detail_hari">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hari_txt"
                android:text="@string/minggu"
                android:textSize="35sp"
                android:textColor="@color/putih"
                android:textAllCaps="true"
               android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hari_txt"
                android:layout_marginTop="2dp"
                android:id="@+id/tanggal_txt"
                android:textSize="15sp"
                android:text="@string/_31"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hari_txt"
                android:layout_toRightOf="@+id/tanggal_txt"
                android:layout_marginTop="2dp"
                android:id="@+id/bulan_txt"
                android:textSize="15sp"
                android:layout_marginLeft="2dp"
                android:text="Desember"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hari_txt"
                android:layout_toRightOf="@+id/bulan_txt"
                android:layout_marginTop="2dp"
                android:id="@+id/tahun_txt"
                android:textSize="15sp"
                android:layout_marginLeft="2dp"
                android:text="@string/_2020"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/daun"/>
                    <TextView
                        android:id="@+id/angin_permukaan_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="@string/_101010110"
                        android:layout_marginTop="5dp"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/sudut_putar"
                        android:layout_marginLeft="2dp"/>
                    <TextView
                        android:id="@+id/azimuth_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="@string/_101010110"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/miring"/>
                    <TextView
                        android:id="@+id/elevasi_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/_101010110"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/panahatas"
                        android:layout_marginLeft="2dp"/>
                    <TextView
                        android:id="@+id/ketinggian_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="@string/_101010110"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_detail"
                android:layout_below="@+id/bulan_txt"
                android:layout_marginLeft="8dp"
                android:text="@string/data_id"
                android:textSize="10sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_txt"
                android:layout_toRightOf="@+id/id_detail"
                android:layout_below="@+id/bulan_txt"
                android:text="@string/_101010110"
                android:textSize="10sp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>